--- a/design-architect/main_module/build.gradle
+++ b/design-architect/main_module/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+
+    testImplementation 'org.hamcrest:hamcrest-library:2.1'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
