--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 // 配置主项目和项目的子模块
-rootProject.name = "GradleBuildToolBasic"
-include 'child_module'
-include 'other_module'
+// rootProject.name = "GradleBuildToolBasic"
+// include 'child_module'
+// include 'other_module'
 
