create modules structures

--- a/build.gradle
+++ b/build.gradle
@@ -6,37 +6,39 @@ plugins {
 group = "org.example"
 version = "1.0-SNAPSHOT"
 
-// 使用maven中心仓库作为项目的依赖来源
-// https://mvnrepository.com/repos/central
+// TODO. 设置项目源代码的编码格式
+compileJava.options.encoding='UTF-8'
+
+// 配置项目的依赖来源Repo
 repositories {
-   mavenCentral()
+    // mavenCentral()
+    maven {
+        url "https://mvnrepository.com/repos/central"
+        allowInsecureProtocol = true
+    }
 }
 
+// 统一配置所有项目的设置
 allprojects {
     apply plugin: 'java'
-}
-
-subprojects {
-    // 配置所有项目的子项目的相关配置
-    apply plugin: 'java-library'
-
-    repositories {
-        maven { url "http://dev-nexus.xxx.net/content/groups/public/" }
-    }
-
-    dependencies {
-
-    }
 
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
 
-// TODO. 设置项目源代码的编码格式
-compileJava.options.encoding='UTF-8'
+// 统一配置子项目的依赖和Repo
+subprojects {
+    // apply plugin: 'java-library'
+
+    repositories {
+    }
+
+    dependencies {
+    }
+}
 
 dependencies {
-    // 添加测试相关的依赖，向下兼容Junit4的测试
+
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
