--- a/design-projects/core-library/build.gradle
+++ b/design-projects/core-library/build.gradle
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // TODO. 配置项目模块之间的依赖关系
+    implementation project(':design-projects:utils-library')
 }
 
 test {
