--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,10 @@ plugins {
     id("java")
 }
 
-// 定义项目的相关的信息
-group = "org.example"
-version = "1.0-SNAPSHOT"
+group 'org.example'
+version '1.0-SNAPSHOT'
 
-// TODO. 设置项目源代码的编码格式
+// 设置项目源代码的编码格式
 compileJava.options.encoding='UTF-8'
 
 // 配置项目的依赖来源Repo
@@ -35,14 +34,4 @@ subprojects {
 
     dependencies {
     }
-}
-
-dependencies {
-
-    testImplementation(platform("org.junit:junit-bom:5.9.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-}
-
-tasks.test {
-    useJUnitPlatform()
 }
