--- a/custom-plugins/spring-boot-plugin/build.gradle
+++ b/custom-plugins/spring-boot-plugin/build.gradle
@@ -1,11 +1,5 @@
 plugins {
     id 'java'
-
-    // 插件会添加Application层任务: 通过Task直接启动应用, 查找默认启动类
-    // - bootRun
-    // - bootTestRun
-    // > ./gradlew bootRun
-    // > ./gradlew bootRun --args='--spring.profiles.active=dev'
     id 'org.springframework.boot' version '3.4.4'
 }
 
@@ -13,8 +7,17 @@ plugins {
 // or Gradle’s native bom support for dependency management.
 apply plugin: 'io.spring.dependency-management'
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+tasks.named("bootRun") {
+    // 显示配置Main启动类
+    mainClass = 'org.example.ExampleApplication'
+
+    // bootRun will configure JVM to optimize its launch for faster startup during development.
+    // This behavior can be disabled by using the optimizedLaunch property,
+    optimizedLaunch = false
+
+    // Passing System Properties to application
+    systemProperty 'com.example.property', findProperty('example') ?: 'default'
+}
 
 repositories {
     mavenCentral()
