--- a/custom-dependencies/build.gradle
+++ b/custom-dependencies/build.gradle
@@ -1,23 +1,36 @@
 plugins {
     id 'java'
-}
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+    // TODO. 引入依赖管理插件
+    id 'io.spring.dependency-management' version "1.1.7"
+}
 
 repositories {
     mavenCentral()
 }
 
+// TODO. 配置在不同阶段所需的依赖
 dependencies {
-    // implementation 'org.springframework.ai:spring-ai-openai'
+    // 该依赖的版本由dependencyManagement所引入和管理
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    compileOnly "commons-io:commons-io:2.18.0"
+    runtimeOnly "org.apache.commons:commons-lang3:3.17.0"
+    implementation "com.google.guava:guava:33.4.6-jre"
+
+    testCompileOnly 'junit:junit:4.13.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+
+    // TODO. Lombok和MapStruct依赖需要在编译源码时使用注解解析器
+    // 通过注解解析器还原原本的Java Bean Object类型
+    compileOnly "org.projectlombok:lombok:1.18.36"
+    annotationProcessor "org.projectlombok:lombok:1.18.36"
 }
 
-// TODO. 需要使用项目管理的插件
-//  管理项目依赖的统一版本, 同时引入多个所需版本
-// dependencyManagement {
-//     imports {
-//         // Bill of Materials (BOM)
-//         // mavenBom "org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT"
-//     }
-// }
+// TODO. 统一管理依赖的多个版本: Bill of Materials (BOM)
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2024.0.0'
+    }
+}
