finish java application plugin

--- a/custom-plugins/java-application-plugin/build.gradle
+++ b/custom-plugins/java-application-plugin/build.gradle
@@ -1,19 +1,16 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+// 必须为Application Plugin设置main启动类
+application {
+    mainClass = 'org.example.Main'
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
+    // Set specific JVM settings or system properties
+    // These JVM arguments are applied to the run task
+    applicationDefaultJvmArgs = ['-Dgreeting.language=english']
 }
