add custom dependencies transitive

--- a/design-testing/build.gradle
+++ b/design-testing/build.gradle
@@ -17,4 +17,8 @@ dependencies {
 // TODO. 关于测试阶段的控制
 test {
     useJUnitPlatform()
+
+    options {
+        systemProperties(System.getProperties())
+    }
 }
