--- a/custom-dependencies-transitive/build.gradle
+++ b/custom-dependencies-transitive/build.gradle
@@ -13,3 +13,6 @@ repositories {
 // dependencies {
 //    api 'org.apache.commons:commons-compress:1.26.1'
 // }
+
+// Declaring Dependency Constraints
+// 添加依赖的限制和约束版本
