--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
-# Configuring the Build Environment
-# https://docs.gradle.org/current/userguide/build_environment.html
+# Define project properties information
+appName = Gradle Build Tool Project
+appVersion = 1.0.1.x
+business = Development
 
 org.gradle.daemon=false
 # org.gradle.debug=true
+
+# Configuring the Build Environment
+# https://docs.gradle.org/current/userguide/build_environment.html
